--- a/AddressBookAppSpringBoot/src/main/resources/application.properties
+++ b/AddressBookAppSpringBoot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Logger Setup
 logging.file.name=application.log
-logging.level.root=info
+logging.level.root=warn
 #Pattern for Logger
 logging.pattern.console=%d{MM/dd/yyyy HH:mm} [%level][%thread][%logger{6}:%line] %msg%n
 logging.pattern.file=%d{yyyy-yyyy-MM HH:mm} [%level][%thread][%logger{6}:%line] %msg%n
@@ -12,3 +12,14 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=8081
+
+#email service
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=varadbharde1993@gmail.com
+spring.mail.password=ocwrmvpnieplnrje
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
